config/fastapi/deployment_fastapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapisimple
  template:
    metadata:
      labels:
        env: dev
        app: fastapisimple
      annotations:
        description: "This is a very simple fastapi front end"
    spec:
      containers:
        - image: doroncomputer/fastapisimple:v1
          name: fastapisimple
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          imagePullPolicy: "Always"
          # Set environmnet variables
