config/fastapi/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
    service: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
