config/fastapi/service_fastapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: fastapisimple
