config/fastapi/service_redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  ports:
    - port: 6379
      targetPort: 6379
      name: tcp
  selector:
    app: redis
