config/fastapi/fastapi-virtual.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fastapisimple
spec:
  hosts:
    - "*"
  gateways:
    - bookinfo-gateway
  http:
    - match:
        - uri:
            exact: /persons
        - uri:
            exact: /ping
        - uri:
            exact: /redis
        - uri:
            exact: /

      route:
        - destination:
            host: fastapisimple
            port:
              number: 80
