config/fastapi/virtual_fastapi.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fastapi-virtual
spec:
  hosts:
    - "*"
  gateways:
    - main-gateway
  http:
    - match:
        - uri:
            exact: /persons
        - uri:
            exact: /ping
        - uri:
            exact: /redis
        - uri:
            exact: /

      route:
        - destination:
            host: fastapi-service
            port:
              number: 80
